--- a/.env
+++ b/.env
@@ -24,11 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=iotproject.chernozem@gmail.com
+MAIL_PASSWORD=chernozem123
+MAIL_ENCRYPTION=ssl
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
